# sqlite-sync-snapshot

./: .gitignore  ECOSYSTEM_ANALYSIS.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  VALIDATION_REPORT.txt  pyproject.toml
mnt/user-data/outputs/sqlite_sync_snapshot/src/snapshot_store/: __init__.py
mnt/user-data/outputs/sqlite_sync_snapshot/src/snapshot_store/integrity/: __init__.py
src/snapshot_store/: __init__.py  engine.py  errors.py  invariants.py
src/snapshot_store/integration/: sync_adapter.py
src/snapshot_store/integrity/: canonical.py  hashing.py  verification.py
src/snapshot_store/model/: blob.py  bundle.py  snapshot.py  tree.py
src/snapshot_store/storage/: gc.py  layout.py  object_store.py
tests/: test_gc_safety.py  test_hash_determinism.py  test_snapshot_verification.py  test_structure.py  test_tamper_detection.py
